# StatParser

./: CMakeLists.txt  README.md  about.html  def.css  input_data.txt  main.html  main.js  riot_caller.py  stats.html  style.css  style2.css  task.txt
builded/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  config.json
builded/.cmake/api/v1/reply/: cache-v2-aba5a51062f6acdca02a.json  cache-v2-b01d9f5a60caf7c45990.json  cmakeFiles-v1-5b6306cadc4b8ffe9a3c.json  cmakeFiles-v1-cd828a8a8e89c6d014a2.json  codemodel-v2-710528ee558cb2c8d196.json  codemodel-v2-eb1b1ba108789c80be68.json  index-2023-11-01T15-07-29-0487.json  index-2023-11-01T15-25-51-0867.json  target-statparser-Debug-134f6a883119f57cea74.json  target-statparser-Debug-3673338909658eab4943.json
builded/apis/luahello/: config.json
builded/apis/pyhello/: config.json  main.py
front/: main.html  style.css
src/: main.cpp  response.cpp
